Korjauksia tehty virheiden tarkistukseen käyttöliittymä ja tulkki -luokissa.